<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto" tools:ignore="MissingTranslation">

    <!-- App -->
    <string name="app_keep">Keep</string>
    <string name="app_history">History</string>

    <!-- Nav -->
    <string name="nav_vod">Vod</string>
    <string name="nav_live">Live</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_downloading">Downloading</string>

    <!-- Vod -->
    <string name="vod_home">Home</string>

    <!-- Download -->
    <string name="download">Download</string>
    <string name="create_download">Create Task</string>
    <string name="download_detail">Download Detail</string>
    <string name="downloading">Downloading</string>
    <string name="download_url_hint">Please Input or Paste Download Url(Support: magnet://、thunder://、ftp://、http://、ed2k://、m3u8)</string>
    <string name="start_download">Start Download</string>
    <string name="download_finish">Download Finish</string>
    <string name="download_size">%1$s / %2$s</string>
    <string name="download_speed">%1$s / s </string>
    <string name="download_status">Pause</string>
    <string name="download_stop">Stop</string>
    <string name="download_connect">Connecting</string>
    <string name="download_fail">Fail</string>
    <string name="download_waiting">Waiting</string>
    <string name="download_downloading">Downloading</string>
    <string name="download_remaining_time">Remaining Time</string>
    <string name="download_delete_file">File is Delete</string>
    <string name="download_open">Open</string>

    <!-- Detail -->
    <string name="detail_flag">Flag</string>
    <string name="detail_more">More</string>
    <string name="detail_outer_download">Outer Download</string>
    <string name="detail_inner_download">Inner Download</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_quality">Quality</string>
    <string name="detail_content">Summary</string>
    <string name="detail_search">Searching <xliff:g name="name">%s</xliff:g></string>

    <!-- Device -->
    <string name="device_select">Select devices</string>
    <string name="device_offline">Device is offline</string>
    <string name="device_scan">Please scan QR Code to bind</string>

    <!-- Control -->
    <string name="control_speed">Speed</string>
    <string name="control_scale">Scale</string>
    <string name="control_track">Track</string>
    <string name="control_other">Other</string>
    <string name="control_display">Display</string>

    <!-- Timer -->
    <string name="timer_5">5 minutes</string>
    <string name="timer_15">15 minutes</string>
    <string name="timer_30">30 minutes</string>
    <string name="timer_60">1 hour</string>
    <string name="timer_delay">Add 5 minutes</string>
    <string name="timer_cancel">Cancel timer</string>

    <!-- Transmit -->
    <string name="transmit_apk">Push apk</string>
    <string name="transmit_vod_config">Push vod config</string>
    <string name="transmit_wall_config">Push wallpaper</string>
    <string name="transmit_push_restore">Push restore</string>
    <string name="transmit_pull_restore">Pull restore</string>
    <string name="transmit_pull_restore_desc">Data restore from TV?</string>

    <!-- Hint -->
    <string name="shortcut">Shortcut has been added.</string>

    <string-array name="select_background">
        <item>Off</item>
        <item>On</item>
        <item>PiP</item>
    </string-array>

</resources>