<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_download"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/downloadUrlInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight = "1"
            android:gravity="top"
            android:hint="@string/download_url_hint"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textCursorDrawable="@null"/>
        <Button
            android:id="@+id/startDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_download" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight = "1"
            android:text="" />
    </LinearLayout>
</LinearLayout>