<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/add"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_download_add" />

    </LinearLayout>





    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            android:layout_gravity="right"
            app:layout_scrollFlags="scroll|enterAlways">
            <TextView
                android:id="@+id/downloading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/downloading"
                android:textSize="16sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/downloadFinish"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/download_finish"
                android:textColor="@color/white"/>
        </LinearLayout>
    <com.fongmi.android.tv.ui.custom.CustomViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</LinearLayout>

